--- a/homestyle.css
+++ b/homestyle.css
@@ -5,6 +5,7 @@
 
 body {
     padding: 50px 150px;
+    margin: 0 auto ;
 }
 #nav {
     margin-bottom: 90px;
@@ -57,16 +58,15 @@ h1 {
     background-color: whitesmoke;
     padding-bottom: 20px;
     margin-right: 10px;
+    margin-left: 10px;
 }
 .main-3 {
-    display: block;
+    position: relative;
+    top: 0px;
     color: black;
-    line-height: 42px;
     text-transform: capitalize;
     font-weight: bold;
     font-size: 24px;
-    position: relative;
-    bottom: 270px;
     background-image: url("https://t4.ftcdn.net/jpg/05/34/52/39/360_F_534523908_Zz4LumTStMaVGYeQTpGGD3nKJT5JqUoO.jpg");
     background-size: 500px 400px;
     background-repeat: no-repeat;
@@ -88,63 +88,114 @@ h1 {
     margin: 10px;
     width: 20px;
 }
-#appointment-button{
-    display: inline-block;
-    background-color: brown;
-    color: azure;
-    font-size: 14px;
-    font-weight: bolder;
-    border-radius: 5px;
-    text-transform: uppercase;
-    position: relative;
-    top: 60px;
-    left: 300px;
-}
+
 .first {
     color: black;
     display: block;
     margin-left: 0px;
     margin-right: 600px;
-    position: relative;
-    left: 600px;
     font-weight: 500;
     font-size: 40px;
+    width: 345px;
 }
 .second-paragraph {
     color: orange;
     height: 150px;
     width: 300px;
-    position: relative;
-    left: 550px;
-    top: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 300px;
+    position: relative;
+    top: 20px;
+    overflow: scroll;
 }
 .image-1 {
-    position: relative;
+    position: sticky;
+    left: 550px;
     box-sizing: border-box;
     height: 320px;
     width: 500px;
-    bottom: 300px;
+    bottom: 200px;
 }
-.section-header{
-    text-align: center;
-    font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
-    border: 0px none blanchedalmond;
-    padding-left: 300px;
-}
-.text-main{
-    font-weight: bold;
-    font-size: 12px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: right;
-    border: 200px none blanchedalmond;
-    padding-left: 300px;
-    padding-right: 300px;
-}
-#header-image {
+.image-2 {
     position: relative;
-    bottom: 80px;
-    left: 600px;
+    bottom: 250px;
+    width: 80%;
+    opacity: 0.2;
+}
+.image-3{
+    position: relative;
+    left:550px;
+    bottom: 800px;
+}
+.image-4{
+    position: relative;
+    bottom: 800px;
+    right: 300px;
+    width: 470px;
+    height: 280px;
+}
+.image-5 {
+    position: sticky;
+    left: 655px;
+    box-sizing: border-box;
+    height: 320px;
+    width: 500px;
+    bottom: 540px;
+}
+
+/*<!-- HTML !-->
+<button class="button-28" role="button">Button 28</button>*/
+
+
+#appointment-button {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transition;
+    position: relative;
+    top: 220px;
+    left: 200x
+    pointer-events: none;
+}
+#appointment-button:hover {
+    color: plum;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+#appointment-button:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+footer {
+    position: fixed;
+    bottom: 0px;
+}
+#mail,
+#whatsapp img {
+    display: inline-block;
+    margin: 40px, auto;
+    width: 2px;
+    height: 2px;
 }
