--- a/myword.css
+++ b/myword.css
@@ -4,6 +4,8 @@
 }
 body {
     padding: 10px;
+    display: inline-flex;
+    min-width: 400px;
 }
 nav {
     background-color: white;
@@ -67,7 +69,7 @@ nav .appointment-button:active {
     height: 600px;
 }
 .site-name {
-    display: inline-block;
+    box-sizing: border-box;
     min-width: 400px;
     min-height: 50px;
     left: 37px;
