--- a/myword.css
+++ b/myword.css
@@ -1,51 +1,33 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-@media screen {(max-width: 600px){
-    }
-    .site-name {
-    display: inline-block;
-    text-wrap: none;
-    min-width: 500px;
-    min-height: 50px;
-    left: 37px;
-    position: relative;
-    bottom: 600px;
-    font-size: 77pxpx;
-    }
-    }
-
-
 body {
-    padding: 10px;
-    /*background-color: pink;*/
+    max-width: ;
+    display: grid;
+    grid-template-areas: "nav nav nav"
+                        "site-banner main D"
+                        "welcome main main";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 12% 1fr 1fr;
 }
-nav {
-    display: inline-flex;
-    background-color: white;
-    height: 40px;
-    min-width: 570px;
-    max-width: 100%;
-    background-color: #f5e8aa;
-    position: fixed;
-    z-index: 100;
-    }
 
-nav a{
-    display: inline-block;
+nav {
+    display: block;
+    width: 50px;
+    background-color: ;
+    grid-area: nav;
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 10;
+}
+nav a {
     background-color: lightsalmon;
+    display: block;
     width: 200px;
     height: 20px;
-    margin-right: 30px;
+    margin-bottom: 30px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 24px;
     text-align: center;
     text-decoration: none;
-    font-size: 24px;
     font-weight: bold;
-    position: relative;
-    top: 2px;
     border-radius: 6px;
     color: black;
 }
@@ -77,22 +59,35 @@ nav .appointment-button:active {
     background-color: lightcoral;
     color: #000000;
 }
-
-.banner {
-    
-    width: 100%;
-    height: 600px;
+.appointment-button:hover {
+    background-color: red;
 }
+
+
+.site-banner {
+    background-color: white;
+    grid-area: site-banner;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: 5;
+    height: ;
+}
+.site-banner img {
+    box-sizing: border-box;
+    object-fit: contain;
+    width: 100%;
+    height: 60%;
+}
+
 .site-name {
     display: inline-flex;
     text-wrap: none;
-    min-width: 200px;
+    min-width: 150px;
     min-height: 50px;
-    left: 37px;
     position: relative;
-    bottom: 450px;
+    bottom: 300px;
     font-size: 77px;
-    left: 10px;
+    left: 90px;
     color:#ff8680;
     /*position: sticky;
     bottom: 180px;*/
@@ -104,123 +99,89 @@ nav .appointment-button:active {
     color: purple;
 }
 
-.site-footer {
-    position: relative;
-    top: 1236px;
-    background-color: teal;
-    height: 200px;
-    font-size: 12px;
-    width: 100%;
-}
-/*.info a{
-    font-size: 24px;
-    text-transform: none;
-    margin-bottom: 30px;
-    position: relative;
-    left: 600px;
-    bottom: 20px;
-    color: black;
-}*/
-.info .footer-home:hover {
-    color: white;
-    text-decoration: underline;
-    cursor: pointer;
-}
-.info .footer-service:hover {
-    color: white;
-    text-decoration: underline;
-    cursor: pointer;
-}
-.info .footer-us:hover{
-    color: white;
-    text-decoration: underline;
-    cursor: pointer;
-}
-.info .footer-location:hover {
-    color: white;
-    text-decoration: underline;
-    cursor: pointer;
-}
-.info .footer-contact:hover {
-    color: white;
-    text-decoration: underline;
-    cursor: pointer;
-}
-ul {
-    list-style-type: none;
-}
-
-.copy {
-    display: inline-flex;
-    position: relative;
-    top: 150px;
-    color: white;
-}
-.copy a{
-    color: white;
-}
-.logo {
-    display: inline-flex;
-    position: relative;
-    left: 500px;
-    top: 63px;
-}
-ul {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 300px;
-    align-items: center;
-    position: relative;
-    left: 25%;
-    bottom: 11px;
-    font-size: 24px;
-    color: #f5e8aa;
-}
-ul li{
-    margin-top: 10px;
-}
-ul a {
-    color: #f5e8aa;
-    text-transform: uppercase;
-    text-decoration: none;
-
-}
 
 .welcome {
+    background-color: #B28B77;
+    opacity: 1;
+    grid-area: welcome;
+    grid-column: 1/span 3;
+    grid-row: 2;
+    z-index: 10;
+    text-align: center;
     display: inline-flex;
+    position: relative;
+    top: 300px;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
     align-content: space-around;
-    background-color: ;
     text-wrap: wrap;
     width: 50%;
-    height: 550px;
-    position: relative;
-    left: 262px;
-    bottom: 121px;
+    /*height: 550px;*/
     font-size: 20px;
     color: sienna;
-    gap: 20px;
+    border: solid 2px tan;
+    box-sizing: border-box;
+    height: 400px;
 }
-
 .main {
-    display: inline-flex;
-    width: 600px;
+    background-color: ;
+    display: flex;
+    flex-direction: column;
     position: relative;
-    top: 68px;
-    margin-bottom: 40px;
-    
+   /* top: 16%;*/
+    grid-area: main;
+    grid-column: 1/span 3;
+    grid-row: 3;
+    z-index: 10;
 }
 .main h2 {
     font-family: "Dancing Script", cursive;
+    color: sienna;
     font-optical-sizing: auto;
     font-weight: bolder;
     font-style: normal;
     font-size: 222%;
     padding-bottom: 30px;
     text-align: center;
+    background-color: ;
+}
+.D {
+    background-color: #A23900;
+    color: black;
+    display: inline-flex;
+    flex-direction: column;
+    
+    align-items: center;
+    
+    text-wrap: wrap;
+    width: 400px;
+    position: relative;
+    left: 26%;
+    top: 300px;
+    grid-area: D;
+    grid-column: 2/4;
+    grid-row: 2;
+    border: solid 2px tan;
+    z-index: 100;
+    box-sizing: border-box;
+    height: 400px;
+}
+
+.main img {
+    box-sizing: border-box;
+    max-height: 200px;
+    max-width: 200px;
+    object-fit: contain;
+}
+main {
+    display: inline-flex;
+    flex-direction: row;
+    gap: 60px;
+}
+.image-holder {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
 }
 td{
     border-bottom: solid 2px rgba(255, 192, 203, 0.957);
@@ -230,8 +191,6 @@ td{
     width: 150px;
     text-align: center;
     font-weight: 50px;
-    position: relative;
-    right: 270px;
 }
 .col {
     background-color: rgba(240, 128, 128, 0.434);
@@ -243,109 +202,3 @@ td:hover {
     background-color: rgba(165, 42, 42, 0.779);
     color: white;
 }
-
-.images {
-    display: inline-flex;
-    flex-direction: row;
-    text-wrap: wrap;
-    position: relative;
-    bottom: 620px;
-    left: 123px;
-    margin-bottom: 20px;
-    align-items: flex-start;
-    align-content: space-around;
-    justify-content: space-between;
-    gap: 20px;
-    background-image: url("https://t4.ftcdn.net/jpg/01/16/88/37/240_F_116883786_wuckft1sNw1ouQfJ6FuquZnxea3qBlxy.jpg");
-}
-.image .one {
-    display: flex;
-    
-    text-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-}
-.two {
-    display: flex;
-    text-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-}
-.three {
-    display: flex;
-    text-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20px;
-}
-img {
-    width: 200px;
-    height: 200px;
-    flex-direction: row;
-}
-.reviews p{
-    display: inline-flex;
-    height: 80px;
-    justify-content: space-between;
-    align-content: space-around;
-    color: sienna;
-}
-.extra {
-    display: inline-flex;
-    width: 600px;
-    height: 400px;
-    justify-content: space-between;
-    align-content: space-around;
-    color: sienna;
-    background-color: #000000;
-    gap: 40px;
-}
-.extra1 {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-around;
-}
-.extra2 {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-around;
-}
-#rev1 {
-    border-radius: 50%;
-    position: relative;
-    right: 373px;
-    bottom: 501px;
-}
-#rev2 {
-    border-radius: 50%;
-    position: relative;
-    left: 299px;
-    bottom: 516px;
-}
-.first {
-    position: relative;
-    left: 276px;
-    bottom: 1007px;
-    width: 300px;
-}
-.second {
-    position: relative;
-    right: 267px;
-    bottom: 1140px;
-    width: 410px;
-}
-.third {
-    position: relative;
-    right: 200px;
-    bottom: 814px;
-}
-
