--- a/BraidyTreats.css
+++ b/BraidyTreats.css
@@ -107,8 +107,8 @@ nav a{
     display: inline-block;
     position: relative;
     bottom: 35%;
-    right: 5%;
     font-size: 2rem;
+    text-align: center;
 }
 
 /*Editing the welcome section of the page*/
@@ -359,7 +359,7 @@ td:hover {
     justify-content: flex-start;
     background-color: #CD5C5C;
     height: 150%;
-    width: 40%;
+    width: 45%;
     gap: 1.5%;
     font-size: 1.4rem;
     font-weight: 700px;
@@ -372,7 +372,7 @@ td:hover {
     justify-content: flex-start;
     background-color: #CD5C5C;
     height: 150%;
-    width: 40%;
+    width: 45%;
     gap: 5%;
     font-size: 1.4rem;
     font-weight: 700px;
